test/mpi/errors/comm/Makefile.sm
INCLUDES = -I../../include -I${top_srcdir}/include
LDADD = ../../util/mtest.o
DEPADD = @MPILIBLOC@ ../../util/mtest.o
smvar_do_sharedlibs = 0

cfree_SOURCES    = cfree.c
userdup_SOURCES  = userdup.c

../../util/mtest.o:
	(cd ../../util && $(MAKE) mtest.o )

